modify get_helper to be able to run is_enabled_xxx without self

--- a/ckanext/feedback/templates/package/resource_read.html
+++ b/ckanext/feedback/templates/package/resource_read.html
@@ -11,7 +11,7 @@
         </tr>
       </thead>
       <tbody>
-        {% if h.is_enabled_downloads(self) == True %}
+        {% if h.is_enabled_downloads() == True %}
           <tr>
             <th scope="row">{{ _('Download') }}</th>
             <td>{{ h.get_resource_downloads(res.id) }}</td>
