--- a/ckanext/feedback/templates/package/snippets/additional_info.html
+++ b/ckanext/feedback/templates/package/snippets/additional_info.html
@@ -1,7 +1,7 @@
 {% ckan_extends %}
 
 {% block package_additional_info %}
-  {% if h.is_enabled_downloads(self) == True %}
+  {% if h.is_enabled_downloads() == True %}
     <tr>
       <th scope="row" class="dataset-label">{{ _('Download') }}</th>
       <td class="dataset-details" property="foaf:homepage">{{ h.get_package_downloads(pkg_dict.id) }}</td>
