--- a/ckanext/feedback/templates/snippets/package_item.html
+++ b/ckanext/feedback/templates/snippets/package_item.html
@@ -78,7 +78,7 @@ Example:
                       <img src="/images/empty_rating_star.png" alt="empty rating star" width="16" height="16"/>
                     </p>
                   </div>
-                  {% if h.is_enabled_downloads(self) == True %}
+                  {% if h.is_enabled_downloads() == True %}
                     <div class = "bubble">
                       <i class="fa fa-arrow-circle-o-down"></i>
                       {{ h.get_package_downloads(package.id) }}
