--- a/ckanext/feedback/templates/package/snippets/resource_item.html
+++ b/ckanext/feedback/templates/package/snippets/resource_item.html
@@ -6,7 +6,7 @@
     {{ h.resource_display_name(res) | truncate(50) }}<span class="format-label" property="dc:format" data-format="{{ res.format.lower() or 'data' }}">{{ h.get_translated(res, 'format') }}</span>
     {{ h.popular('views', res.tracking_summary.total, min=10) if res.tracking_summary }}
   </a>
-  {% if h.is_enabled_downloads(self) == True %}
+  {% if h.is_enabled_downloads() == True %}
     <div class = "bubble">
       <i class="fa fa-arrow-circle-o-down"></i>
       {{ h.get_resource_downloads(res.id) }}
