--- a/ckanext/feedback/templates/package/resource_read.html
+++ b/ckanext/feedback/templates/package/resource_read.html
@@ -65,6 +65,13 @@
                 {% endblock %}
                 </div>
               </li>
+              <li>
+                <div class="btn-group">
+                  <a class="btn btn-primary resource-url-analytics resource-type-{{ res.resource_type }}" href="{{ h.url_for('utilization.registration', name=pkg.name, resource_id=res.id) }}">
+                    <i class="fa fa-pencil-square-o"></i> {{ _('利活用方法の登録') }}
+                  </a>
+                </div>
+              </li>
             {% endif %}
             {% endblock %}
           </ul>
