--- a/ckanext/feedback/templates/utilization/edit.html
+++ b/ckanext/feedback/templates/utilization/edit.html
@@ -78,7 +78,7 @@
                   <h4>内容</h4>
                   <textarea class="form-control" cols="20" rows="5" id="description" name="description"></textarea>
                   <br>
-                  <button class="btn btn-primary delete-btn" id="delete_flag" name="delete_flag" value="True">削除</button>
+                  <button class="btn btn-primary delete-btn" id="delete_flag" name="delete_flag" value="True" onclick="return confirmation()">削除</button>
                   <button class="btn btn-primary update-btn" id="update_flag" name="update_flag" value="True">更新</button>
                 </form>
               </div>
@@ -102,6 +102,7 @@
 {%- block scripts %}
   {% asset 'base/main' %}
   {% asset 'base/ckan' %}
+  {% asset 'feedback/feedback-edit-js' %}
   {% if g.tracking_enabled %}
     {% asset 'base/tracking' %}
   {% endif %}
