--- a/ckanext/feedback/templates/snippets/package_item.html
+++ b/ckanext/feedback/templates/snippets/package_item.html
@@ -63,9 +63,11 @@ Example:
           {% block resources_outer %}
             <ul class="dataset-resources list-unstyled">
               {% block resources_inner %}
-                {% for resource in h.dict_list_reduce(package.resources, 'format') %}
+                {% asset 'feedback/feedback-tooltip-css' %}
                 <li>
-                  <a href="{{ h.url_for(package.type ~ '.read', id=package.name) }}" class="label label-default" data-format="{{ resource.lower() }}">{{ resource }}</a>
+                  {% for resource in h.dict_list_reduce(package.resources, 'format') %}
+                    <a href="{{ h.url_for(package.type ~ '.read', id=package.name) }}" class="label label-default" data-format="{{ resource.lower() }}">{{ resource }}</a>
+                  {% endfor %}
                   <div class="utilization-data">
                     <p>利活用数：</p>
                     <p>評価：
@@ -76,8 +78,14 @@ Example:
                       <img src="/images/empty_rating_star.png" alt="empty rating star" width="16" height="16"/>
                     </p>
                   </div>
+                  {% if h.is_enabled_downloads() %}
+                    <div class = "bubble">
+                      <i class="fa fa-arrow-circle-o-down"></i>
+                      {{ h.get_package_downloads(package.id) }}
+                      <div class="description">ダウンロード数</div>
+                    </div>
+                  {% endif %}
                 </li>
-                {% endfor %}
               {% endblock %}
             </ul>
           {% endblock %}
