rename Download to Downloads to sepalate the action to download and the number of downloads

--- a/ckanext/feedback/templates/package/resource_read.html
+++ b/ckanext/feedback/templates/package/resource_read.html
@@ -63,7 +63,7 @@
       <tbody>
         {% if h.is_enabled_downloads() %}
           <tr>
-            <th scope="row">{{ _('Download') }}</th>
+            <th scope="row">{{ _('Downloads') }}</th>
             <td>{{ h.get_resource_downloads(res.id) }}</td>
           </tr>
         {% endif %}
