--- a/ckanext/feedback/templates/snippets/package_item.html
+++ b/ckanext/feedback/templates/snippets/package_item.html
@@ -82,7 +82,7 @@ Example:
                     <div class = "bubble">
                       <i class="fa fa-arrow-circle-o-down"></i>
                       {{ h.get_package_downloads(package.id) }}
-                      <div class="description">{{ _('Download') }}</div>
+                      <div class="description">{{ _('Downloads') }}</div>
                     </div>
                   {% endif %}
                 </li>
