--- a/ckanext/feedback/templates/package/snippets/resource_item.html
+++ b/ckanext/feedback/templates/package/snippets/resource_item.html
@@ -10,7 +10,7 @@
     <div class = "bubble">
       <i class="fa fa-arrow-circle-o-down"></i>
       {{ h.get_resource_downloads(res.id) }}
-      <div class="description">{{ _('Download') }}</div>
+      <div class="description">{{ _('Downloads') }}</div>
     </div>
   {% endif %}
 {% endblock %}
