--- a/ckanext/feedback/templates/package/resource_read.html
+++ b/ckanext/feedback/templates/package/resource_read.html
@@ -76,10 +76,16 @@
             <td>{{ h.get_resource_downloads(res.id) }}</td>
           </tr>
         {% endif %}
-        <tr>
-          <th scope="row">{{ _('利活用数') }}</th>
-          <td><a href="{{ h.url_for('utilization.search', id=resource.id, disable_keyword=true) }}">数字</a></td>
-        </tr>
+        {% if h.is_enabled_utilizations() %}
+          <tr>
+            <th scope="row">{{ _('利活用数') }}</th>
+            <td><a href="{{ h.url_for('utilization.search', id=resource.id, disable_keyword=true) }}">数字</a></td>
+          </tr>
+          <tr>
+            <th scope="row">{{ _('Issue Resolutions') }}</th>
+            <td>{{ h.get_resource_issue_resolutions(res.id) }}</td>
+          </tr>
+        {% endif %}
         <tr>
           <th scope="row">{{ _('Data last updated') }}</th>
           <td>{{ h.render_datetime(res.last_modified) or h.render_datetime(res.created) or _('unknown') }}</td>
