--- a/ckanext/feedback/templates/package/snippets/resource_item.html
+++ b/ckanext/feedback/templates/package/snippets/resource_item.html
@@ -13,6 +13,13 @@
       <div class="description">{{ _('Downloads') }}</div>
     </div>
   {% endif %}
+  {% if h.is_enabled_utilizations() %}
+  <div class = "bubble">
+      <img id="issue-resolution" src="/images/issue_resolution_badge.png">
+      {{ h.get_resource_issue_resolutions(res.id) }}
+      <div class="description">{{ _('Issue Resolutions') }}</div>
+    </div>
+  {% endif %}
 {% endblock %}
 
 {% block resource_item_explore %}
