--- a/ckanext/feedback/templates/snippets/package_item.html
+++ b/ckanext/feedback/templates/snippets/package_item.html
@@ -88,6 +88,13 @@ Example:
                       <div class="description">{{ _('Downloads') }}</div>
                     </div>
                   {% endif %}
+                  {% if h.is_enabled_utilizations() %}
+                    <div class="bubble">
+                      <img id="issue-resolution" src="/images/issue_resolution_badge.png">
+                      {{ h.get_package_issue_resolutions(package.id) }}
+                      <div class="description">{{ _('Issue Resolutions') }}</div>
+                    </div>
+                  {% endif %}
                 </li>
               {% endblock %}
             </ul>
