Added issue resolution function

--- a/ckanext/feedback/templates/package/snippets/additional_info.html
+++ b/ckanext/feedback/templates/package/snippets/additional_info.html
@@ -7,10 +7,16 @@
       <td class="dataset-details" property="foaf:homepage">{{ h.get_package_downloads(pkg_dict.id) }}</td>
     </tr>
   {% endif %}
-  <tr>
-    <th scope="row">{{ _('利活用数') }}</th>
-    <td><a href="{{ h.url_for('utilization.search', id=pkg_dict.id, disable_keyword=true) }}">数字</a></td>
-  </tr>
+  {% if h.is_enabled_utilizations() %}
+    <tr>
+      <th scope="row">{{ _('利活用数') }}</th>
+      <td><a href="{{ h.url_for('utilization.search', id=pkg_dict.id, disable_keyword=true) }}">数字</a></td>
+    </tr>
+    <tr>
+      <th scope="row" class="dataset-label">{{ _('Issue Resolutions') }}</th>
+      <td class="dataset-details">{{ h.get_package_issue_resolutions(pkg_dict.id) }}</td>
+    </tr>
+  {% endif %}
   {% if pkg_dict.url %}
     <tr>
       <th scope="row" class="dataset-label">{{ _('Source') }}</th>
