internationalizing ckanext-feedback (#19)
* modify the displayed sentence to internationalize

* bring setup.py/setup.cfg from feature/utilization-internationalizetion

* rename Download to Downloads to sepalate the action to download and the number of downloads

* add ITranslation plugin to translate English to Japanese

* test to use ITranslation

* add .po file to translate to Japanese

* translate from English to Japanese refer to official ckan translation

* rename Testplugin to Feedbackplugin

* modify the path to the i18n deirectory

* modify VIRTUAL_ENV to CKAN_VENV

* delete i18n_directory and inherit DefaultTranslation

* delete import sentence of os

* delete poetry.lock from repository

* add Babel into pyproject.toml

* add **/*.mo in tool.poetry to include .mo file to package

* delete tool.poetry to fix the bub

* add *.mo in tool.poetry to include .mo file in package

* add email and maintainer name

* rename Japanese to English in default html file and translate it

* modify the typo

* run black/pflake8/isort

* change the version of babel to match the one ckan2.9.7 uses

* add link to create new resource

* to be able to run extract with babel in local

* add project section with name and version

* add ':' next to URL

* delete project section form pyproject.toml

* add copyright-holder and email-address when run extract command

--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -36,7 +36,7 @@
                       {% snippet 'snippets/home_breadcrumb_item.html' %}
                       {% block breadcrumb_content %}
                         {{ super() }}
-                        <li class="active"><a href="{{ h.url_for('utilization.search') }}">{{ _('利活用方法') }}</a></li>
+                        <li class="active"><a href="{{ h.url_for('utilization.search') }}">{{ _('Utilization') }}</a></li>
                       {% endblock %}
                     </ol>
                   {% endif %}
@@ -64,7 +64,7 @@
                     {% if not disable_keyword %}
                       <h4>キーワード検索</h4>
                       <div class="input-group search-input-group">
-                        <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('キーワード検索...') }}" aria-label="{{ _('Search utilizaton data') }}" autocomplete="off" value="{{ keyword }}"/>
+                        <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('Keyword Search...') }}" aria-label="{{ _('Search utilizaton data') }}" autocomplete="off" value="{{ keyword }}"/>
                         <span class="input-group-btn">
                           <button class="btn btn-default btn-lg" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
                         </span>
